// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Will be link 1`] = `
<Link
  className="btn dvc-button undefined 
		dvc-button--primary
		dvc-primary-background
		 
		 
		
		 
		"
  replace={false}
  to="/home"
  type=""
>
  <div
    className="d-flex justify-content-center align-items-center"
  >
    <i
      className="dvc-button__loader"
      key="loader_comp"
    />
  </div>
</Link>
`;

exports[`<Button /> Will be link deep 1`] = `
<a
  className="btn dvc-button undefined 
		dvc-button--primary
		dvc-primary-background
		 
		 
		
		 
		"
  disabled={undefined}
  href="/home"
  onClick={[Function]}
  target={undefined}
  type=""
>
  <div
    className="d-flex justify-content-center align-items-center"
  >
    <i
      className="dvc-button__loader"
    />
    
    
  </div>
</a>
`;

exports[`<Button /> Will be loading 1`] = `
<button
  className="btn dvc-button undefined 
		dvc-button--primary
		dvc-primary-background
		 
		 
		
		 
		"
  disabled={true}
  type="button"
>
  <div
    className="d-flex justify-content-center align-items-center"
  >
    <i
      className="dvc-button__loader mr-2 dvc-button__loader--show"
      key="loader_comp"
    />
  </div>
</button>
`;

exports[`<Button /> Will be loading deep 1`] = `
<button
  className="btn dvc-button undefined 
		dvc-button--primary
		dvc-primary-background
		 
		 
		
		 
		"
  disabled={true}
  onClick={undefined}
  type="button"
>
  <div
    className="d-flex justify-content-center align-items-center"
  >
    <i
      className="dvc-button__loader mr-2 dvc-button__loader--show"
    />
    
    
  </div>
</button>
`;

exports[`<Button /> Will be secondary button 1`] = `
<button
  className="btn dvc-button undefined 
		
		dvc-primary-background
		 
		 
		
		 
		"
  type="button"
>
  <div
    className="d-flex justify-content-center align-items-center"
  >
    <i
      className="dvc-button__loader"
      key="loader_comp"
    />
  </div>
</button>
`;

exports[`<Button /> Will have new target 1`] = `
<button
  className="btn dvc-button undefined 
		dvc-button--primary
		dvc-primary-background
		 
		 
		
		 
		"
  type="button"
>
  <div
    className="d-flex justify-content-center align-items-center"
  >
    <i
      className="dvc-button__loader"
      key="loader_comp"
    />
  </div>
</button>
`;

exports[`<Button /> Will have new target deep 1`] = `
<button
  className="btn dvc-button undefined 
		dvc-button--primary
		dvc-primary-background
		 
		 
		
		 
		"
  disabled={undefined}
  onClick={undefined}
  type="button"
>
  <div
    className="d-flex justify-content-center align-items-center"
  >
    <i
      className="dvc-button__loader"
    />
    
    
  </div>
</button>
`;

exports[`<Button /> Will render 1`] = `
<button
  className="btn dvc-button undefined 
		dvc-button--primary
		dvc-primary-background
		 
		 
		
		 
		"
  type="button"
>
  <div
    className="d-flex justify-content-center align-items-center"
  >
    <i
      className="dvc-button__loader"
      key="loader_comp"
    />
  </div>
</button>
`;

exports[`<Button /> Will render deep 1`] = `
<button
  className="btn dvc-button undefined 
		dvc-button--primary
		dvc-primary-background
		 
		 
		
		 
		"
  disabled={undefined}
  onClick={undefined}
  type="button"
>
  <div
    className="d-flex justify-content-center align-items-center"
  >
    <i
      className="dvc-button__loader"
    />
    
    
  </div>
</button>
`;

exports[`<Button /> Will show text 1`] = `
<button
  className="btn dvc-button undefined 
		dvc-button--primary
		dvc-primary-background
		 
		 
		
		 
		"
  type="button"
>
  <div
    className="d-flex justify-content-center align-items-center"
  >
    <i
      className="dvc-button__loader"
      key="loader_comp"
    />
    <span
      key="text_comp"
    >
      Hey there!
    </span>
  </div>
</button>
`;

exports[`<Button /> Will show text deep 1`] = `
<button
  className="btn dvc-button undefined 
		dvc-button--primary
		dvc-primary-background
		 
		 
		
		 
		"
  disabled={undefined}
  onClick={undefined}
  type="button"
>
  <div
    className="d-flex justify-content-center align-items-center"
  >
    <i
      className="dvc-button__loader"
    />
    
    <span>
      Hey there!
    </span>
  </div>
</button>
`;

exports[`<Button /> Willbe secondary button deep 1`] = `
<button
  className="btn dvc-button undefined 
		
		dvc-primary-background
		 
		 
		
		 
		"
  disabled={undefined}
  onClick={undefined}
  type="button"
>
  <div
    className="d-flex justify-content-center align-items-center"
  >
    <i
      className="dvc-button__loader"
    />
    
    
  </div>
</button>
`;
